2005-06-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-handlers.el (vc-registered): Explicitly disable VC for URL files.

	* url.el (url-retrieve-synchronously): Don't exit precipitously when
	fetching a file via ange-ftp.

2005-06-10  Juanma Barranquero  <lekktu@gmail.com>

	* url-cookie.el (url-cookie-multiple-line): Fix spelling in docstring.

2005-05-19  Juanma Barranquero  <lekktu@gmail.com>

	* url-cookie.el (url-cookie-multiple-line):
	Specify group and type in defcustom.

2005-05-06  Juanma Barranquero  <lekktu@gmail.com>

	* url-auth.el (url-register-auth-scheme):
	* url-cookie.el (url-cookie-expired-p):
	* url-dav.el (url-dav-process-date-property)
	(url-dav-process-boolean-property, url-dav-process-DAV:status):
	* url-http.el (url-http-chunked-encoding-after-change-function)
	(url-http-wait-for-headers-change-function):
	* url-ns.el (isInNet):
	* url-parse.el (url-generic-parse-url):
	* url-util.el (url-get-normalized-date): Replace `string-to-int'
	by `string-to-number'.

2005-04-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url.el (url-retrieve-synchronously): Work around the fact that
	url-http sometimes doesn't call the callback.

2005-04-04  Lute Kamstra  <lute@gnu.org>

	* url-handlers.el (url-handler-mode): Specify :group.

2005-02-26  James Cloos  <cloos@jhcloos.com>  (tiny change)

	* url-history.el (url-have-visited-url): Don't barf if
	url-history-hash-table is nil.

2005-02-14  Michael Welsh Duggan  <md5i@cs.cmu.edu>

	* url-http.el (url-http-parse-headers): Test url-automatic-caching.

2005-01-22  Klaus Straubinger  <KSNetz@Arcor.DE>  (tiny change)

	* url-http.el (url-http-parse-headers) <302>: Reset url-http-data
	to nil, like for the 303 response.

2005-01-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url.el (url-retrieve-synchronously): Use accept-process-output rather
	than sit-for.

2005-01-03  Klaus Straubinger  <ksnetz@arcor.de>  (tiny change)

	* url-http.el (url-http-handle-authentication):